tests/ui/fn/implied-bounds-impl-header-projections.stderr
error: lifetime may not live long enough
  --> $DIR/implied-bounds-impl-header-projections.rs:24:9
   |
LL | impl<'a, 'b> Extend<'a, 'b> for <&'b &'a () as Trait>::Type
   |      --  -- lifetime `'b` defined here
   |      |
   |      lifetime `'a` defined here
...
LL |         s
   |         ^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`

error: aborting due to 1 previous error

